--- a/Writings/thesis.org
+++ b/Writings/thesis.org
@@ -6,9 +6,9 @@
 #+INCLUDE: ./abnt/_pretextual.org
 
 
-* QCA
+* Super abm
 
-#+INCLUDE: "./QCA/Research_Paper.org" :lines "13-"
+#+INCLUDE: "./Super_ABM/Research_Paper.org" :lines "13-"
 
 * Appendix :ignore:
 
