--- a/Writings/thesis.tex
+++ b/Writings/thesis.tex
@@ -1,4 +1,4 @@
-% Created 2021-02-04 qui 12:09
+% Created 2021-07-12 seg 15:35
 % Intended LaTeX compiler: pdflatex
 \documentclass[12pt,openright,oneside,a4paper,english,sumario=tradicional]{gpsabntex}
   \usepackage{lipsum}             % Pacote que gera texto dummy
@@ -284,70 +284,30 @@ Conclui-se que a taxa própria de juros dos imóveis explica a taxa de crescimen
 \renewcommand{\thepage}{\arabic{page}}  % Setting the page output to arabic   -- not necessary, unless `book` class and `\frontmatter` is used.
 
 
-\chapter{QCA}
-\label{sec:org7d6e719}
+\chapter{Super abm}
+\label{sec:org0323024}
 
 \epigraph{The Fed, the European Central Bank and the Bank of Japan together set monetary policy for a zone that accounts for 80 per cent of the world’s
 industrialized economic activity ... Rarely, if ever, can so much power have been wielded by such a small number of institutions sitting outside the
 direct democratic process.}{Goldman Sachs, 2000}
 
-
 \section{Introduction}
-\label{sec:org102f394}
-\subsection{Importância do mercado imobiliário para compreender características da GFC}
-\label{sec:orgda04412}
-\subsection{Relação entre endividamento das famílias, preço dos imóveis e estabilidade financeira}
-\label{sec:org05cbb8f}
-\subsection{Apresentação do conceito de hipotecarização e mudanças de longo prazo}
-\label{sec:org84fdfb0}
-\subsection{Apresentação da revolução}
-\label{sec:org9ff92df}
+\label{sec:org3fa734b}
 \subsection{Estrutura do artigo}
-\label{sec:orgb6563cf}
+\label{sec:org838aff7}
 
 \section{Empirical motivation}
-\label{sec:org315cf4a}
-\subsection{Apresentar conceito da hipotecarização}
-\label{sec:org75b1661}
-\subsection{Analisar os dados}
-\label{sec:org937b7b1}
-\subsection{Agrupar países e explicitar possíveis hipóteses direcionais e trajetórias}
-\label{sec:org5908c61}
-\section{Review of literature}
-\label{sec:org13efb36}
-\subsection{Revisão da literatura de financeirização e pouca anteção para o setor imobiliário}
-\label{sec:orgdf73de0}
-\subsection{Apresentar a revolução em maiores detalhes}
-\label{sec:org14c520f}
-\subsection{Apresentar comparação internacional e elementos institucionais}
-\label{sec:org942298e}
-\subsection{Revisão da literatura empírica e incapacidade de analisar variáveis qualitativas adequadamente}
-\label{sec:orge438122}
-\section{Data and Methods}
-\label{sec:org8e0fdd9}
-\subsection{Reagrupar informações institucionais de forma qualitativa}
-\label{sec:org0fb21ac}
-\subsection{Apresentar origens, aplicações e vantagens do QCA}
-\label{sec:org9378e9c}
-\subsection{Explicar etapas do QCA}
-\label{sec:org60502bf}
-\subsection{Calibrar dados}
-\label{sec:orgf8e9d86}
-\subsection{Elaborar Truth table}
-\label{sec:orgd66eb9d}
-\section{Results and parameters of fit}
-\label{sec:orgd91ce8c}
-\subsection{Minimização da presença do resultado}
-\label{sec:org5a23eb3}
-\subsection{Minimização da ausência do resultado}
-\label{sec:org8a1207d}
-\subsection{Apresentar parâmetros dos resultados}
-\label{sec:orgbe8884b}
-\subsubsection{Testes de reobustez}
-\label{sec:org8bb4ded}
-
+\label{sec:org0c80d03}
+\section{Review of theoretical literature}
+\label{sec:org2e9be18}
+\section{Model}
+\label{sec:org398c7f9}
+\section{Validation}
+\label{sec:org6a719f0}
+\section{Experiments}
+\label{sec:org0d861db}
 \section{Concluding remarks}
-\label{sec:org6eeafd0}
+\label{sec:orgd5d68dd}
 
 \appendix
 \end{document}
